--- a/views/home.mustache
+++ b/views/home.mustache
@@ -70,23 +70,25 @@
             
           <div class="container bg-dark">
 
-            <div class="row">
-              <div class="col-12 d-flex justify-content-center">
-                <button type="button" class="btn btn-danger mt-4 mb-3 rounded-1">
-                  Log In
-                </button>
-              </div>
-              </div>
-            <div class="row mb-4 pb-2 pt-0">
-                
-                <div class="col-12 d-flex justify-content-center">
+            <div class="row pt-4 pb-0">
+                <div class="d-flex justify-content-center">
                   <h3 class="text-light fw-light">
                     Sit back, relax, and get ready to buy your next car.
                   </h3>
                 </div>
             </div>
 
-          </div>
+            <div class="row mb-0 pb-2 pt-0">
+              <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-danger mt-4 mb-3 rounded-1">
+                  Log In
+                </button>
+              </div>
+            </div>
+            
+          
+        </div>
+
           </main>
           <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
             <div class="container-fluid text-center">
