--- a/views/home.mustache
+++ b/views/home.mustache
@@ -22,7 +22,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">
             <img
-        src="/public/images/small_logo.png"
+        src="/images/small_logo.png"
         width="50"
         alt="Otto Logo"
       />
@@ -64,22 +64,27 @@
 
         <div class="row px-0 mx-0 mt-4 mb-md-4 mb-sm-0">
           <div class="col-md-5 g-0 mb-0">
-              <img src="/public/images/logo.png" alt="" class="img-fluid d-none d-md-block" />
-              <img src="/public/images/logo_thin.png" alt="" class="img-fluid d-md-none" />
+              <img src="images/logo.png" alt="" class="img-fluid d-none d-md-block" />
+              <img src="/images/logo_thin.png" alt="" class="img-fluid d-md-none" />
             </div>
 
             <div class="col-md-7 g-0 mb-0">
               <!-- <img src="/public/images/nissan_gtr.jpg" alt="" class="img-fluid" style="height: 100%; object-fit: cover;" /> -->
-              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" style="height: 100%; object-fit: cover;" src="/public/images/audi_rs3.jpeg" alt="First slide">
+                    <img class="d-block w-100" style="height: 100%; object-fit: cover;" src="/images/audi_rs3.jpeg" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" style="height: 100%; object-fit: cover;" src="/public/images/nissan_gtr.jpg" alt="Second slide">
+                    <img class="d-block w-100" style="height: 100%; object-fit: cover;" src="/images/nissan_gtr.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" style="height: 100%; object-fit: cover;"src="/public/images/ford_bronco.jpg" alt="Third slide">
+                    <img class="d-block w-100" style="height: 100%; object-fit: cover;"src="/images/ford_bronco.jpg" alt="Third slide">
                   </div>
                 </div>
               </div>
