css minor edits

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link href="/public/css/style.css" rel="stylesheet">
+    <link href="./public/css/style.css" rel="stylesheet"/>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -65,7 +65,7 @@
         <div class="row px-0 mx-0 mt-4 mb-md-4 mb-sm-0">
           <div class="col-md-5 g-0 mb-0">
               <img src="images/logo.png" alt="" class="img-fluid d-none d-md-block" />
-              <img src="/images/logo_thin.png" alt="" class="img-fluid d-md-none" />
+              <img src="images/logo_thin.png" alt="" class="img-fluid d-md-none" />
             </div>
 
             <div class="col-md-7 g-0 mb-0">
