--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link href="./public/css/style.css" rel="stylesheet"/>
+    <link href="/css/style.css" rel="stylesheet"/>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/account/register">Register</a>
@@ -107,9 +107,11 @@
 
         <div class="row mb-0 pb-2 pt-0">
           <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-danger mt-4 mb-3 rounded-0">
-              LOG IN
-            </button>
+              <form method="GET" action="/account/login">
+                <button class="btn btn-danger mt-4 mb-3 rounded-0">
+                LOG IN
+                </button>
+            </form>
           </div>
         </div>
 
