--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+/* body {
+  background-color: rgb(68, 75, 76);
+} */
+
 body {
-    background-color: rgb(68, 75, 76);
+  background-color: blueviolet;
 }
