--- a/views/register.mustache
+++ b/views/register.mustache
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <!-- CSS only -->
+<link rel="stylesheet" href="css/account.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,6 +15,10 @@
       <form method="POST" action="/account/register">
         <input type="text" placeholder="Desired username" name="username" />
         <input type="password" placeholder="Desired password" name="password" />
+        <input type ="radio" id="Customer" value ="true" name="customer_dealership" required >
+        <label for="Customer">Customer</label>
+        <input type ="radio" id="Dealership" value ="false"  name="customer_dealership" required>
+        <label for= "Dealership" >Dealership</label>
         <button>Register</button>
       </form>
       <a href="/account/login">Back to Log In</a>
