--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <!-- CSS only -->
+    <link rel="stylesheet" href="css/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,10 +44,10 @@
                 <a class="nav-link" href="/account/register">Register</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">How It Works</a>
+                <a class="nav-link" href="/about-us">How It Works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="/contact-us">Contact Us</a>
               </li>
             </ul>
           </div>
