created user table and linked to updated reg page

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OTTO</title>
   </head>
-  <body>
+    <body>
 
     <!-- NAVBAR -->
     
@@ -58,6 +58,7 @@
       </nav>
     </header>
     <main class="container mt-4 py-5">
+      
       <div class="container g-0" >
 
         <!-- MAIN BANNER -->
@@ -69,7 +70,7 @@
             </div>
 
             <div class="col-md-7 g-0 mb-0">
-              <!-- <img src="/public/images/nissan_gtr.jpg" alt="" class="img-fluid" style="height: 100%; object-fit: cover;" /> -->
+              
               <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -108,8 +109,8 @@
         <div class="row mb-0 pb-2 pt-0">
           <div class="d-flex justify-content-center">
               <form method="GET" action="/account/login">
-                <button class="btn btn-danger mt-4 mb-3 rounded-0">
-                LOG IN
+                <button class="btn btn-danger mt-4 mb-3 rounded-5">
+                ENTER
                 </button>
             </form>
           </div>
