--- a/views/login.mustache
+++ b/views/login.mustache
@@ -67,15 +67,15 @@
             
             <div class="form-group mt-4">
               <label for="exampleInputEmail1">Email Address:</label>
-              <input type="email" class="form-control rounded-0 mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@email.com" name="email">
+              <input type="email" class="form-control rounded-5 mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@email.com" name="email">
               
             </div>
             <div class="form-group mt-3">
               <label for="exampleInputPassword1">Password:</label>
-              <input type="password" class="form-control rounded-0 mt-2" id="exampleInputPassword1" placeholder="password" name="password">
+              <input type="password" class="form-control rounded-5 mt-2" id="exampleInputPassword1" placeholder="password" name="password">
             </div>
             
-            <div class="row">
+            <div class="row mt-2">
 
               <div class="col-6">
   
@@ -94,7 +94,7 @@
                 <!-- <a href="/account/register">Create an account</a> -->
               </div>
             </div>
-            <p>
+            <p class="d-flex justify-content-center">
               {{ message }}
             </p>
         </div>
