--- a/views/register.mustache
+++ b/views/register.mustache
@@ -1,138 +1,166 @@
-    <html lang="en">
-      <head>
-        <link href="/css/style.css" rel="stylesheet" />
-        <!-- CSS only -->
-        <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-          crossorigin="anonymous"
-        />
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>OTTO</title>
-      </head>
-      <body>
-        <!-- NAVBAR -->
+<html lang="en">
+  <head>
+    <link href="/css/style.css" rel="stylesheet" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OTTO</title>
+  </head>
+  <body>
+    <!-- NAVBAR -->
+
+    <header>
+      <nav class="navbar fixed-top navbar-expand-lg bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/account/register">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">How It Works</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- MAIN SECTION -->
     
-        <header>
-          <nav class="navbar fixed-top navbar-expand-lg bg-light">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/account/register">Register</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">How It Works</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
-                  </li>
-                </ul>
+    <main class="container mt-4 py-5 d-flex justify-content-center">
+      
+      <div class="col-8 ">
+        <div class="row mt-4">
+          <img src="/images/logo_thin.png" alt="" class="img-fluid" />
+        </div>
+        <div class="row d-flex justify-content-center">
+          <h3 class="mt-4 d-flex justify-content-center">Account Registration</h3>
+          <form method="POST" action="/account/register">
+
+            <div class="row">
+              <div class="col-6">
+                
+                <div class="form-group mt-4">
+                  <label for="firstName">First Name:</label>
+                  <input type="text" class="form-control rounded-5 mt-2" id="firstName" placeholder="First name" name="firstName">
+                </div>
+
               </div>
-            </div>
-          </nav>
-        </header>
-    
-        <!-- MAIN SECTION -->
-        
-        <main class="container mt-4 py-5 d-flex justify-content-center">
-          
-          <div class="col-8 ">
-            <div class="row mt-4">
-              <img src="/images/logo_thin.png" alt="" class="img-fluid" />
-            </div>
-            <div class="row d-flex justify-content-center">
-              <h3 class="mt-4 d-flex justify-content-center">Account Registration</h3>
-              <form method="POST" action="/account/register">
-
-                <div class="row">
-                  <div class="col-6">
-                    
-                    <div class="form-group mt-4">
-                      <label for="firstName">First Name:</label>
-                      <input type="text" class="form-control rounded-0 mt-2" id="firstName" placeholder="First name" name="firstName">
-                    </div>
-
-                  </div>
-                  <div class="col-6">
-                    
-                    <div class="form-group mt-4">
-                      <label for="lastName">Last Name:</label>
-                      <input type="text" class="form-control rounded-0 mt-2" id="lastName" placeholder="Last name" name="lastName">
-                    </div>
-                    
-                  </div>
-                </div>
-                <div class="form-group mt-3">
-                  <label for="exampleInputEmail1">Email Address:</label>
-                  <input type="email" class="form-control rounded-0 mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@email.com" name="email">
-                  
-                </div>
-                <div class="form-group mt-3">
-                  <label for="exampleInputPassword1">Desired Password:</label>
-                  <input type="password" class="form-control rounded-0 mt-2" id="exampleInputPassword1" placeholder="password" name="password">
+              <div class="col-6">
+                
+                <div class="form-group mt-4">
+                  <label for="lastName">Last Name:</label>
+                  <input type="text" class="form-control rounded-5 mt-2" id="lastName" placeholder="Last name" name="lastName">
                 </div>
                 
-                <div class="row">
-    
-                  <div class="col-6">
-      
-                    <button class="btn btn-danger mt-3 rounded-0 text-nowrap">Create Account</button>       
-      
-      
-                  </div>
-                </form>
-                  <div class="col-6 d-flex justify-content-end justify-text-end">
-      
-                    <form method="GET" action="/account/login">
-                      <!--<small id="register-msg" class="text-nowrap px-3 d-flex align-self-center">Don't have an account?</small> -->
-                      <button class="btn btn-secondary mt-3 rounded-0 text-nowrap">Back to Log In</button>
-                    </form>
-                  </div>
-                </div>
-
-                <p>
-                  {{ message }}
-                </p>
+              </div>
             </div>
-          </div>
+            <div class="form-group mt-4">
+              <label for="exampleInputEmail1">Email Address:</label>
+              <input type="email" class="form-control rounded-5 mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@email.com" name="email">
+              
+            </div>
+            <div class="form-group mt-4">
+              <label for="exampleInputPassword1">Desired Password:</label>
+              <input type="password" class="form-control rounded-5 mt-2" id="exampleInputPassword1" placeholder="password" name="password">
+            </div>
+
+            <div class="form-group mt-4">
+              <label for="accountType">Account Type:</label>
+
+              <!-- <div class="form-check">
+                <input class="form-check-input mt-2" type="radio" name="accountType" value="customer" id="flexRadioDefault1" checked>
+                <label class="form-check-label mt-2" for="flexRadioDefault1">
+                  Customer
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="accountType" value="dealer" id="flexRadioDefault2">
+                <label class="form-check-label" for="flexRadioDefault2">
+                  Dealer
+                </label>
+              </div> -->
+
+              
+                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+
+                  <input type="radio" class="btn-check" name="accountType" value="customer" id="btnradio1" autocomplete="off" checked>
+                  <label class="btn btn-outline-dark rounded-5 mx-2" for="btnradio1">Customer</label>
+
+                  <input type="radio" class="btn-check" name="accountType" value="dealer" id="btnradio2" autocomplete="off">
+                  <label class="btn btn-outline-dark rounded-5 mx-2" for="btnradio2">Dealer</label>
+
+                </div>
+                
           
-        </main>
-    
-        <!-- FOOTER -->
-    
-        <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
-          <div class="container-fluid text-center">
-            <span class="text-muted">Created with Bootstrap v5.2.0</span>
-          </div>
-        </footer>
-    
-        <!-- JavaScript Bundle with Popper -->
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-          crossorigin="anonymous"
-        ></script>
-      </body>
-    </html>
-    
+            
+            <div class="row mt-2">
+
+              <div class="col-6">
+  
+                <button class="btn btn-danger mt-3 rounded-0 text-nowrap">Create Account</button>       
+  
+  
+              </div>
+            </form>
+              <div class="col-6 d-flex justify-content-end justify-text-end">
+  
+                <form method="GET" action="/account/login">
+                  <!--<small id="register-msg" class="text-nowrap px-3 d-flex align-self-center">Don't have an account?</small> -->
+                  <button class="btn btn-secondary mt-3 rounded-0 text-nowrap">Back to Log In</button>
+                </form>
+              </div>
+            </div>
+
+            <p class="d-flex justify-content-center">
+              {{ message }}
+            </p>
+        </div>
+      </div>
+      
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
+      <div class="container-fluid text-center">
+        <span class="text-muted">Created with Bootstrap v5.2.0</span>
+      </div>
+    </footer>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
