created basic dealer dashboard view

--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -36,16 +36,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/dealer/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/account/register">Register</a>
+                <a class="nav-link" href="#">List a Car</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">How It Works</a>
+                <a class="nav-link" href="#">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="#">Log Out</a>
               </li>
             </ul>
           </div>
@@ -54,9 +54,14 @@
     </header>
 
     <!-- MAIN SECTION -->
-    <main>
+    <main class="container mt-4 py-5 d-flex justify-content-center">
+    
+        <div class="row">
+          <h1>Dealer Dashboard</h1>
 
-        <h1>Dealer Dashboard</h1>
+        </div>
+
+    
       
     </main>
 
