navbar changes to dashboard

--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -44,8 +44,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Log Out</a>
+              <li class="form-inline my-2 my-lg-0">
+                <form method="POST" action="/account/logout">
+                  <button class="btn btn-secondary rounded-5 text-nowrap">Log Out</button>
+                  <!-- <a class="nav-link" href="#">Log Out</a> -->
+                </form>
               </li>
             </ul>
           </div>
