--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -41,13 +41,16 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">List a Car</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Profile
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Account Settings</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/account/logout">Log Out</a></li>
+                </ul>
               </li>
-              <li class="form-inline my-2 my-lg-0">
-                <form method="POST" action="/account/logout">
-                  <button class="btn btn-secondary rounded-5 text-nowrap">Log Out</button>
-                  <!-- <a class="nav-link" href="#">Log Out</a> -->
                 </form>
               </li>
             </ul>
