--- a/views/request.mustache
+++ b/views/request.mustache
@@ -1,7 +1,8 @@
     <html lang="en">
       <head>
-        {{! <link href="/css/style.css" rel="stylesheet" /> }}
+       
         <!-- CSS only -->
+         <link href="/css/request.css" rel="stylesheet"/>
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -60,14 +61,17 @@
         
             <div class="row d-flex justify-content-center">
               <h3 class="mt-4 d-flex justify-content-center">Submit a Request</h3>
-              <form method="POST" action="/account/register">
+              
+
+              
 
                 <div class="row">
                   <div class="col-6">
                     
-                    <div class="form-group mt-4 justify-content-center">
-                      <label >Car Model:</label>
-                      <select name="make">
+                    <div class="form-group mt-4 pb-4 justify-content-center">
+                      <label > Make</label>
+                      <select name="make" required>
+                      <option value="" disabled selected hidden>Make</option>
                       <option>Lexus</option>
                       <option>Toyota</option>
                       <option>BMW</option>
@@ -76,49 +80,89 @@
                       <option>Jeep</option>
                       <option>Acura</option>
                       </select>
-                      {{! <input type="text" class="form-control rounded-0 mt-2" id="firstName" placeholder="Car Model" name="carModel"> }}
+                    
                     </div>
 
                   </div>
                   <div class="col-6">
                     
-                    <div class="form-group mt-4">
-                      <label>Model:</label>
+                    <div class="form-group mt-4 justify-content-center">
+                      <label required>Model:</label>
                       <input type="text" placeholder="Model" name="model">
                     </div>
-                    <label for="customRange2" class="form-label">Example range</label>
-<input type="range" class="form-range" min="0" max="500000" id="customRange2">
-
+                    
                   </div>
                 </div>
-                <div class="form-group mt-3">
+                <div class="row">
+                <div class="col-6">
+                    <div class= "form-group mt-5 justify-content-center align-text-bottom">
+                        <label>Year:</label>
+                      <input type="number" min="1900" max="2023" step="1" value="2016" />
+                      </div>
+                      
+                    </div>
+                    <div class="col-6">
+                        
+                        <div class="form-group mt-5 justify-content-center align-text-bottom">
+                          <label > Color</label>
+                          <select name="color" required>
+                          <option value="" disabled selected hidden>Color</option>
+                          <option>Black</option>
+                          <option>Red</option>
+                          <option>White</option>
+                          <option>Gray</option>
+                          <option>Blue</option>
+                          <option>Navy</option>
+                          <option>Silver</option>
+                          </select>
+                        
+                        </div>
+
+                      </div>
+                </div>
+                 <div class="form-group mt-5">
+
+                     <div class="range">
+                            
+                            <input type="range" class="form-range" value="10000" id="send" min="$1" max="200000" oninput="result.value = send.value" name="price"/>
+                           <h5>Max Price:</h5>   
+                           $<output id ="result">10000</output>
+                            
+                           
+                            
+                            <h5>Max Mileage</h5> 
+
+                            <input type="range" class="form-range" value="10000" id="send2" min="1" max="200000" oninput="result2.value = send2.value" name="mileage"/>
+                            <output id= "result2">10000</output>
+                            
+                            
+                            
+                    </div>
+                {{! <div class="form-group mt-3">
                   <label for="exampleInputEmail1">Email Address:</label>
                   <input type="email" class="form-control rounded-0 mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@email.com" name="email">
                   
                 </div>
-                <div class="form-group mt-3">
+                <div class="form-group mt-5">
                   <label for="exampleInputPassword1">Desired Password:</label>
                   <input type="password" class="form-control rounded-0 mt-2" id="exampleInputPassword1" placeholder="password" name="password">
                 </div>
-                <div class ="form-group mt-3">
-                 <input type ="radio" id="Customer" value ="true" name="customer_dealership" required >
-                      <label for="Customer">Customer</label>
-                    <input type ="radio" id="Dealership" value ="false"  name="customer_dealership" required>
-                      <label for= "Dealership" >Dealership</label>
-                </div>
+                 }}
                 
 
     
                   <div class="col-6 justify-content-center">
 
                    
-                    <button class="btn btn-danger mt-3 rounded-0 text-nowrap">Create Account</button>       
-      
+                    <input type="reset" class="btn btn-danger mt-3 rounded-0 text-nowrap" value="Reset">     
+                     <form method="POST" btn btn-danger mt-4 mb-3 rounded-5" action="/buyer/request">
+                    <button class="btn btn-danger mt-4 mb-3 rounded-5">Submit a Request</button>
+                    </form>
       
                   </div>
-
+                 
           </div>
-          
+        
         </main>
     
         <!-- FOOTER -->
