--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -48,7 +48,7 @@
       </nav>
     </header>
     <div class="container g-0" >
-    <form method="GET" action="/buyer/request">
+    <form method="GET" action="/customer/request">
     <button id="createButton" >Submit a Request</button>
     </form>
     
