--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -60,12 +60,69 @@
     </header>
 
     <!-- MAIN SECTION -->
-    <main class="container mt-4 py-5 d-flex justify-content-center">
+    <main class="container mt-4 py-5">
     
-        <div class="row">
+      <!-- DASHBOARD TABS -->
+        <div class="row text-center">
           <h1>Dealer Dashboard</h1>
+        </div>
+        
+        <div class="col mt-5">
+
+          <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Inventory</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Customer Requests</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">My Offers</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Profile</button>
+            </li>
+          </ul>
+
+          <!-- TAB CONTENT -->
+
+          <!-- NEW TAB -->
+
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+              <div class="row text-center">
+                
+                <!-- Add a car in modal window -->
+                  <div class="container">
+                    <div class="btn btn-danger mt-4 mb-3 rounded-5">Add New Car</div>
+                  </div>
+
+              </div>
+
+
+            </div>
+
+            <!-- NEW TAB -->
+
+            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
+
+            <!-- NEW TAB -->
+
+            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
+
+            <!-- NEW TAB -->
+
+            <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
+
+
+          </div>
 
         </div>
+  
+  
+        
+        
+        
 
     
       
