--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -38,9 +38,6 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/dealer/dashboard">Dashboard</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">List a Car</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Profile
@@ -69,7 +66,7 @@
         
         <div class="col mt-5">
 
-          <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+          <ul class="nav nav-tabs nav-fill border-bottom-2 border-secondary" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Inventory</button>
             </li>
@@ -86,38 +83,118 @@
 
           <!-- TAB CONTENT -->
 
-          <!-- NEW TAB -->
-
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
               <div class="row text-center">
-                
-                <!-- Add a car in modal window -->
-                  <div class="container">
-                    <div class="btn btn-danger mt-4 mb-3 rounded-5">Add New Car</div>
+                <div class="container">
+                  <div class="btn btn-danger mt-4 mb-3 rounded-5" data-bs-toggle="modal" data-bs-target="#add-car-modal">Add New Car</div>
+                </div>
+              </div>
+            </div>
+          
+            <!-- Add car modal -->
+
+            <div class="modal fade" id="add-car-modal" tabindex="-1" aria-labelledby="add-car-modal-title" aria-hidden="true">
+
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="add-car-modal-title">Add Car to Inventory</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
 
-              </div>
+                  <div class="modal-body">
 
+                    <!-- Add Car FORM -->
+                    <form method="POST" action="/dealer/add-car">
+                      <div class="row">
+                        <div class="col-6">
+                          <label for="modal-make" class="form-label">Make:</label>
+                          <select class="form-control" id="modal-make" name="make" required>
+                          <option disabled selected hidden>Select Make</option>
+                          <option>Toyota</option>
+                          <option>Honda</option>
+                          <option>Ford</option>
+                          <option>Volkswagen</option>
+                          </select>
+                        </div>
+
+                        <div class="col-6">
+                          <label for="modal-model" class="form-label">Model:</label>
+                          <select class="form-control" id="modal-model" name="model" required>
+                          <option disabled selected hidden>Select Model</option>
+                          <option>Camry</option>
+                          <option>Accord</option>
+                          <option>Explorer</option>
+                          <option>Jetta</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="row mt-4">
+
+                        <div class="col-6">
+                          <label for="modal-year" class="form-label">Year:</label>
+                            <div class= "form-control" id="modal-year" name="year" required>
+                              <input type="number" min="1980" max="2023" step="1" value="2022" name="year"/>
+                            </div>
+                        </div>
+
+                        <div class="col-6">
+                          <label for="modal-color" class="form-label">Color:</label>
+                          <select class="form-control" id="modal-color" name="color" required>
+                          <option disabled selected hidden>Select Color</option>
+                          <option>White</option>
+                          <option>Black</option>
+                          <option>Gray</option>
+                          <option>Red</option>
+                          <option>Blue</option>
+                          <option>Silver</option>
+                          </select>
+                        </div>
+
+                      </div>
+
+                      <div class="row justify-content-center text-center mt-4">
+                        <div class="col-10 mb-3">
+                          
+                            <label for="modal-mileage" class="form-label">Mileage: </label>
+                            <output id ="result">50000</output>
+                            <input type="range" class="form-range" min="0" max="250000" id="send" oninput= "result.value = send.value" name="mileage" value="50000">  
+
+                      </div>
+                      <div class="row justify-content-center">
+                        <div class="col-4 mt-3">
+
+                          <button class="btn btn-danger rounded-5">Add Car</button>
+                        </div>
+
+                      </div>
+                    </form>
+                  </div>
+
+
+
+
+                  
+                </div>
+              </div>
 
             </div>
 
-            <!-- NEW TAB -->
 
             <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
 
-            <!-- NEW TAB -->
 
             <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
 
-            <!-- NEW TAB -->
 
             <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
 
 
           </div>
 
-        </div>
+            </div>
   
   
         
