--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -1,23 +1,26 @@
 <html lang="en">
-<head>
+  <head>
+    <link href="/css/style.css" rel="stylesheet" />
     <!-- CSS only -->
-<link rel="stylesheet" href="css/style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-<header>
-      <nav class="navbar navbar-expand-lg bg-light">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OTTO</title>
+  </head>
+  <body>
+    <!-- NAVBAR -->
+
+    <header>
+      <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img
-        src="/images/small_logo.png"
-        width="50"
-        alt="Otto Logo"
-      />
+            <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -30,31 +33,225 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse"  id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/customer/dashboard">Dashboard</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about-us">How It Works</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Profile
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Account Settings</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/account/logout">Log Out</a></li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact-us">Contact Us</a>
+                </form>
               </li>
             </ul>
-              
           </div>
         </div>
       </nav>
     </header>
-    <div class="container g-0" >
-    <form method="GET" action="/customer/request">
-    <button id="createButton" >Submit a Request</button>
-    </form>
-    
 
+    <!-- MAIN SECTION -->
+
+    <main class="container mt-4 py-5">
     
+      <div class="row text-center">
+        <h1>Customer Dashboard</h1>
+      </div>
+      
+      <div class="col-12 mt-5">
+         
+        <!-- MAIN DASHBOARD TABS -->
+        <ul class="nav nav-tabs nav-fill border-bottom-2 border-secondary" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="inventory-tab" data-bs-toggle="tab" data-bs-target="#inventory-tab-pane" type="button" role="tab" aria-controls="inventory-tab-pane" aria-selected="true">Request</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="requests-tab" data-bs-toggle="tab" data-bs-target="#requests-tab-pane" type="button" role="tab" aria-controls="requests-tab-pane" aria-selected="false">Customer Requests</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="offers-tab" data-bs-toggle="tab" data-bs-target="#offers-tab-pane" type="button" role="tab" aria-controls="offers-tab-pane" aria-selected="false">My Offers</button>
+          </li>
+        </ul>
+
+        <!-- TAB CONTENT -->
+
+        <div class="tab-content" id="myTabContent">
+
+          <!-- INVENTORY TAB -->
+
+          <div class="tab-pane fade show active" id="inventory-tab-pane" role="tabpanel" aria-labelledby="inventory-tab-pane" tabindex="0">
+
+            <div class="row text-center">
+
+              <div class="container">
+              
+                <!-- ADD CAR BUTTON -->
+
+                <div class="btn btn-danger mt-4 mb-3 rounded-5" data-bs-toggle="modal" data-bs-target="#add-car-modal">Add New Car</div>
+
+               
+                 
+                    <div class="container">
+                      <div class="row justify-content-center "> 
+                      {{#request}}
+                        <div class="card mt-3 " style="width: 18rem; height:auto;">  
+                       
+                        
+                              <div class="card-body">
+                               <form method="POST" action="/customer/delete-request">
+                          
+                         
+                              <h5 class="card-title">{{id}}</h5>
+                              <h5 class="card-title">{{make}} {{model}}</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">{{year}}</h6>
+                              <p class="card-text">color : {{color}}</p>
+                              <p class="card-text">Max Mileage:{{maxMileage}}</p>
+                              <p class="card-text">Max Price:{{maxPrice}}</p>
+
+                              
+                              <input type="hidden" value="{{id}}" name="deleteID">
+                              <button class="btn btn-danger mb-0 btn-sm">Delete</button>
+                          
+                               </form>
+                                    
+                              </div>   
+                           
+                        </div>
+                        {{/request}}    
+                        </div> 
+                    </div>
+                
+            
+
+           
+
+            </div>
+            
+            <div class="modal fade" id="add-car-modal" tabindex="-1" aria-labelledby="add-car-modal-title" aria-hidden="true">
+
+              <!-- MODAL POPUP -->
+
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="add-car-modal-title">Request a Car</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+
+                  <div class="modal-body">
+
+                    <!-- Add Car FORM -->
+                    <form method="POST" action="/customer/dashboard">
+                      <div class="row">
+                        <div class="col-6">
+                          <label for="modal-make" class="form-label ">Make:</label>
+                          <select class="form-control" id="modal-make" name="make" required>
+                          <option disabled selected hidden>Select Make</option>
+                          <option>Toyota</option>
+                          <option>Honda</option>
+                          <option>Ford</option>
+                          <option>Volkswagen</option>
+                          </select>
+                        </div>
+
+                        <div class="col-6">
+                          <label for="modal-model" class="form-label">Model:</label>
+                          <select class="form-control" id="modal-model" name="model" required>
+                          <option disabled selected hidden>Select Model</option>
+                          <option>Camry</option>
+                          <option>Accord</option>
+                          <option>Explorer</option>
+                          <option>Jetta</option>
+                          </select>
+                        </div>
+                      </div>
+
+                      <div class="row mt-4">
+
+                        <div class="col-6">
+                          <label for="modal-year" class="form-label">Year:</label>
+                            <div class= "form-control" id="modal-year" name="year" required>
+                              <input type="number" min="1980" max="2023" step="1" value="2022" name="year"/>
+                            </div>
+                        </div>
+
+                        <div class="col-6">
+                          <label for="modal-color" class="form-label">Color:</label>
+                          <select class="form-control" id="modal-color" name="color" required>
+                          <option disabled selected hidden>Select Color</option>
+                          <option>White</option>
+                          <option>Black</option>
+                          <option>Gray</option>
+                          <option>Red</option>
+                          <option>Blue</option>
+                          <option>Silver</option>
+                          </select>
+                        </div>
+
+                      </div>
+
+                      <div class="row justify-content-center text-center mt-4">
+                        <div class="col-10 mb-3">
+                          
+                            <label for="modal-mileage" class="form-label">Mileage: </label>
+                            <output id ="result">50000</output>
+                            <input type="range" class="form-range" min="0" max="250000" id="send" oninput= "result.value = send.value" name="mileage" value="50000"> 
+
+                            <label for="modal-price" class="form-label">Price: </label>
+                            <output id ="result2">50000</output>
+                            <input type="range" class="form-range" min="0" max="250000" id="send2" oninput= "result2.value = send2.value" name="price" value="50000">  
+
+                      </div>
+                      <div class="row justify-content-center">
+                        <div class="col-4 mt-3">
+
+                          <button class="btn btn-danger rounded-5">Add Car</button>
+                        </div>
+
+                      </div>
+                    </form>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        
+        </div>
+
+        <!-- REQUEST TAB -->
+
+        <div class="tab-pane fade" id="requests-tab-pane" role="tabpanel" aria-labelledby="requests-tab-pane">REQUEST TABLE</div>
+
+        <!-- OFFER TAB -->
+
+        <div class="tab-pane fade" id="offers-tab-pane" role="tabpanel" aria-labelledby="offers-tab-pane">OFFER TABLE</div>
+
+
+      </div>
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
+      <div class="container-fluid text-center">
+        <span class="text-muted">Created with Bootstrap v5.2.0</span>
+      </div>
+    </footer>
+
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
