dealer can submit an offer to customer

--- a/views/offer.mustache
+++ b/views/offer.mustache
@@ -70,30 +70,126 @@
   
       <!-- MAIN SECTION -->
   
-      <main class="container mt-4 py-5">
-      
-        <div class="row text-center">
-          <h1>Create an Offer</h1>
+      <main class="container mt-4 py-5 text-center">
+        
+        <div class="row justify-content-center">
+            <div class="col-6 bg-light mt-4 rounded-3">
+    
+                <div class="row justify-content-center">
+                    <h1>Create an Offer</h1>
+                  </div>
+                  
+                  {{#request}} 
+          
+                    <div class="row justify-content-center">
+                        <div class="col-12 mt-5">
+                            <div class="row justify-content-center">
+                                {{#customer}}
+                                <h2>Customer: {{firstName}} {{lastName}}</h2>
+                                {{/customer}}
+                            </div>
+          
+                            <div class="row justify-content-center mt-3">
+                                <div class="col-10 bg-light rounded-3">
+                  
+                                  <h4>Request Details:</h4>
+                                  <h6>Make: {{make}}</h6>
+                                  <h6>Model: {{model}}</h6>
+                                  <h6>Year: {{minYear}} - {{maxYear}}</h6>
+                                  <h6>Color: {{color}}</h6>
+                                  <h6>Max Mileage: {{maxMileage}}</h6>
+                                </div>
+                                {{/request}}
+          
+                          </div>
+                        </div> 
+                      
+                    </div>
+    
+            </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-6 bg-light mt-4 rounded-3">
+                <form method="POST" action="/dealer/send-offer">
+                    <div class="row">
+                        <div class="col-6">
+                        <label for="make" class="form-label ">Make:</label>
+                        <select class="form-control" id="make" name="make" required>
+                        <option disabled selected hidden>Select Make</option>
+                        <option>Toyota</option>
+                        <option>Honda</option>
+                        <option>Ford</option>
+                        <option>Volkswagen</option>
+                        </select>
+                        </div>
+    
+                        <div class="col-6">
+                        <label for="model" class="form-label">Model:</label>
+                        <select class="form-control" id="model" name="model" required>
+                        <option disabled selected hidden>Select Model</option>
+                        <option>Camry</option>
+                        <option>Accord</option>
+                        <option>Explorer</option>
+                        <option>Jetta</option>
+                        </select>
+                        </div>
+                    </div>
+    
+                    <div class="row mt-4">
+    
+                        <div class="col-6">
+                        <label for="year" class="form-label">Year:</label>
+                            <div class= "form-control" id="year" name="year" required>
+                            <input type="number" min="1980" max="2023" step="1" value="2022" name="year"/>
+                            </div>
+                        </div>
+    
+                        <div class="col-6">
+                        <label for="color" class="form-label">Color:</label>
+                        <select class="form-control" id="color" name="color" required>
+                        <option disabled selected hidden>Select Color</option>
+                        <option>White</option>
+                        <option>Black</option>
+                        <option>Gray</option>
+                        <option>Red</option>
+                        <option>Blue</option>
+                        <option>Silver</option>
+                        </select>
+                        </div>
+    
+                    </div>
+    
+                    <div class="row justify-content-center text-center mt-4">
+                        <div class="col-6 mb-3">
+                        
+                            <label for="mileage" class="form-label">Mileage: </label>
+                            <output id ="result">50000</output>
+                            <input type="range" class="form-range" min="0" max="250000" id="send" oninput= "result.value = send.value" name="mileage" value="50000">  
+    
+                    </div>
+    
+                    <div class="row mt-4 justify-content-center">
+    
+                        <div class="col-6">
+                            <label for="price" class="form-label">Price:</label>
+                            <div class= "form-control" id="offer-price" name="price" required>
+                                $<input type="number" min="0" max="100000" step="1" value="20000" name="price"/>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="row justify-content-center">
+                        <div class="col-4 mt-3">
+                            <button class="btn btn-danger rounded-5">Send Offer</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
         </div>
         
-        {{#request}} 
-        <div class="col-12 mt-5 text-center">
-            {{#customer}}
-            <h2>Send an offer to {{firstName}}</h2>
-            {{/customer}}
-            <div class="container text-align-left">
-
-                <h3>Request Details:</h3>
-                <h4>Make: {{make}}</h4>
-                <h4>Model: {{model}}</h4>
-                <h4>Year: {{minYear}} - {{maxYear}}</h4>
-                <h4>Color: {{color}}</h4>
-                <h4>Max Mileage: {{maxMileage}}</h4>
-            </div>
-            {{/request}}
-        </div> 
-
-           
       </main>
   
       <!-- FOOTER -->
